--- a/1Hello.html
+++ b/1Hello.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+        <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+        <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 </head>
 
 <body>
