--- a/1Hello.html
+++ b/1Hello.html
@@ -2,12 +2,24 @@
 <html>
 
 <head>
-        <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-        <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <script crossorigin src="https://unpkg.com/babel-standalone@6.26.0/babel.min.js"></script>
 </head>
 
 <body>
-    <div>안녕</div>
+    <div id="container"></div>
+    <script type="text/babel">
+        class Hello extends React.Component {
+            render() {
+                return <div>안녕</div>
+            };
+        }
+        ReactDOM.render(
+            <div><Hello/></div>,
+            document.querySelector("#container")
+            );
+        </script>
 </body>
 
 
