--- a/2alpabet.html
+++ b/2alpabet.html
@@ -5,7 +5,7 @@
     <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
-    <style>
+<!--     <style>
         .letter {
             padding: 10px;
             margin: 10px;
@@ -16,7 +16,7 @@
             font-size: 32px;
             text-align: center;
         }
-    </style>
+    </style> -->
 </head>
 
 <body>
@@ -27,6 +27,16 @@
     
     class Letter extends React.Component {
         render() {
+            var letterStyle = {   //자바 스크립트 객체
+                padding: 10,
+                margin: 10,
+                backgroundColor: "yellow",  // camle case로 "-" 대신 대문자로 구분
+                color: "#333",
+                display: "inline-block",
+                fonFfamily: "monospace",
+                fontSize: 32,
+                textAlign: "center"
+            };
             return(
                 <div className="letter">
                     {this.props.children}
